# SpatialScrap

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  app.py  custom.css  pyproject.toml
.github/: repo-description.txt
scripts/: adjust_glb_z.py  analyze_glb.py  check_image.py  convert_bobs_domain.py  debug_convert_bobs.py  decimate_cpu.py  depth_to_glb.py  png2glb.py
src/spatial_scrap/: __init__.py  blender_adapter.py  cli.py  depth_pipeline.py  processor.py
src/spatial_scrap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_depth_pipeline.py
